--- a/conda.yaml
+++ b/conda.yaml
@@ -1,10 +1,11 @@
 channels:
   - conda-forge
 dependencies:
-  - python=3.9.13
-  - pip=22.1.2
+  - python=3.9.16                   # https://pyreadiness.org/3.9/
+  - pip=22.1.2                      # https://pip.pypa.io/en/stable/news/
   - pip:
-      - robocorp-browser==1.0.1
-      - robocorp-excel==0.4.0
-      - robocorp-http==0.2.0
-      - robocorp-tasks==1.0.0
+      - rpaframework==23.3.0        # https://rpaframework.org/releasenotes.html
+      - robocorp-tasks==1.0.0       # https://pypi.org/project/robocorp-tasks/
+      - robocorp-browser==1.0.1     # https://pypi.org/project/robocorp-browser/
+      - robocorp-excel==0.4.0       # https://pypi.org/project/robocorp-excel/
+      - robocorp-workitems==1.0.1   # https://pypi.org/project/robocorp-workitems/
