Aligned with other python templates

--- a/robot.yaml
+++ b/robot.yaml
@@ -1,3 +1,6 @@
+# For more details on the format and content:
+# https://github.com/robocorp/rcc/blob/master/docs/recipes.md#what-is-in-robotyaml
+
 tasks:
   solve_challenge:
     command:
