--- a/conda.yaml
+++ b/conda.yaml
@@ -1,9 +1,15 @@
+# For more details on the format and content:
+# https://github.com/robocorp/rcc/blob/master/docs/recipes.md#what-is-in-condayaml
+# Tip: Adding a link to the release notes of the packages helps maintenance and security.
+
 channels:
   - conda-forge
+
 dependencies:
   - python=3.9.16                   # https://pyreadiness.org/3.9/
   - pip=22.1.2                      # https://pip.pypa.io/en/stable/news/
   - pip:
+      - rpaframework==23.3.0        # https://rpaframework.org/releasenotes.html
       - robocorp-tasks==1.0.0       # https://pypi.org/project/robocorp-tasks/
       - robocorp-browser==1.0.1     # https://pypi.org/project/robocorp-browser/
       - robocorp-excel==0.4.0       # https://pypi.org/project/robocorp-excel/
