--- a/conda.yaml
+++ b/conda.yaml
@@ -10,8 +10,9 @@ dependencies:
   - pip=22.1.2                      # https://pip.pypa.io/en/stable/news/
   - pip:
       - rpaframework==23.3.0        # https://rpaframework.org/releasenotes.html
-      - robocorp-tasks==1.0.0       # https://pypi.org/project/robocorp-tasks/
-      - robocorp-browser==1.0.1     # https://pypi.org/project/robocorp-browser/
+      - robocorp-tasks==2.0.0       # https://pypi.org/project/robocorp-tasks/
+      - robocorp-browser==1.0.2     # https://pypi.org/project/robocorp-browser/
       - robocorp-excel==0.4.0       # https://pypi.org/project/robocorp-excel/
-      - robocorp-workitems==1.0.1   # https://pypi.org/project/robocorp-workitems/
+      - robocorp-workitems==1.2.1   # https://pypi.org/project/robocorp-workitems/
       - robocorp-http==0.2.0        # https://pypi.org/project/robocorp-http/
+      - robocorp-vault==0.4.0       # https://pypi.org/project/robocorp-vault/
