--- a/robot.yaml
+++ b/robot.yaml
@@ -2,17 +2,17 @@
 # https://github.com/robocorp/rcc/blob/master/docs/recipes.md#what-is-in-robotyaml
 
 tasks:
-  solve_challenge:
-    command:
-      - python
-      - -m
-      - robocorp.tasks
-      - run
-      - tasks.py
-      - -t
-      - solve_challenge
+  Browser Example:
+    shell: python -m robocorp.tasks run tasks.py
+
 devTasks: {}
-condaConfigFile: conda.yaml
+
+environmentConfigs:
+  - environment_windows_amd64_freeze.yaml
+  - environment_linux_amd64_freeze.yaml
+  - environment_darwin_amd64_freeze.yaml
+  - conda.yaml
+
 ignoreFiles:
   - .gitignore
 artifactsDir: output
