Update to Python 3.10
- python=3.10.12
- pip=23.2.1
- truststore=0.7.0
- rpaframework==27.1.0

--- a/conda.yaml
+++ b/conda.yaml
@@ -6,11 +6,10 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.9.16                 # https://pyreadiness.org/3.9
-  - pip=22.1.2                    # https://pip.pypa.io/en/stable/news
+  - python=3.10.12                # https://pyreadiness.org/3.10
+  - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
+  - truststore=0.7.0              # https://github.com/sethmlarson/truststore/blob/main/CHANGELOG.md
   - pip:
-    - rpaframework==23.5.2        # https://rpaframework.org/releasenotes.html
-    - robocorp==0.4.0             # https://pypi.org/project/robocorp
-    - robocorp-browser==1.0.2     # https://pypi.org/project/robocorp-browser
-    - robocorp-excel==0.4.0       # https://pypi.org/project/robocorp-excel
-    - robocorp-http==0.2.0        # https://pypi.org/project/robocorp-http
+    - rpaframework==27.1.0        # https://rpaframework.org/releasenotes.html
+    - robocorp==1.0.0             # https://pypi.org/project/robocorp
+    - robocorp-browser==2.1.0     # https://pypi.org/project/robocorp-browser
