Use `requests` library and bump versions

--- a/conda.yaml
+++ b/conda.yaml
@@ -7,9 +7,10 @@ channels:
 
 dependencies:
   - python=3.10.12                # https://pyreadiness.org/3.10
-  - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
   - robocorp-truststore=0.8.0     # https://pypi.org/project/robocorp-truststore/
+  - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
   - pip:
-    - rpaframework==27.7.0        # https://rpaframework.org/releasenotes.html
-    - robocorp==1.2.4             # https://pypi.org/project/robocorp
+    - rpaframework==28.0.0        # https://rpaframework.org/releasenotes.html
+    - robocorp==1.3.0             # https://pypi.org/project/robocorp
     - robocorp-browser==2.2.1     # https://pypi.org/project/robocorp-browser
+    - requests==2.31.0            # for HTTP requests (downloading a file)
