--- a/conda.yaml
+++ b/conda.yaml
@@ -13,4 +13,4 @@ dependencies:
     - rpaframework==28.0.0        # https://rpaframework.org/releasenotes.html
     - robocorp==1.3.0             # https://pypi.org/project/robocorp
     - robocorp-browser==2.2.1     # https://pypi.org/project/robocorp-browser
-    - requests==2.31.0            # for HTTP requests (downloading a file)
+    - requests==2.31.0            # https://pypi.org/project/requests
