--- a/conda.yaml
+++ b/conda.yaml
@@ -10,10 +10,12 @@ dependencies:
   - robocorp-truststore=0.8.0     # https://pypi.org/project/robocorp-truststore/
   - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
   - pip:
-    - rpaframework==28.2.0        # https://rpaframework.org/releasenotes.html
-    - robocorp==1.6.2             # https://pypi.org/project/robocorp
-    - robocorp-browser==2.2.2     # https://pypi.org/project/robocorp-browser
+    - rpaframework==28.4.1        # https://rpaframework.org/releasenotes.html
+    - robocorp==2.0.0             # https://pypi.org/project/robocorp
+    - robocorp-browser==2.3.1     # https://pypi.org/project/robocorp-browser
     - requests==2.31.0            # https://pypi.org/project/requests
 
 rccPostInstall:
+  # This loads the Playwright browser inside the environment,
+  # avoiding the download from happening during the first run.
   - python -m robocorp.browser install chromium --isolated
